DigicielFull/force-app/main/default/objects/Asset/fields/Asset_Key__c.field-meta.xml
<CustomField>
    <fullName>Asset_Key__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset Key</label>
    <type>Text</type>
</CustomField>