DigicielFull/force-app/main/default/objects/Asset/fields/PNG_AssetName__c.field-meta.xml
<CustomField>
    <fullName>PNG_AssetName__c</fullName>
    <formula>Product2.Name +&apos; - &apos;+ SerialNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset Name</label>
    <type>Text</type>
</CustomField>