DigicielFull/force-app/main/default/objects/Asset/fields/PNG_Contract__c.field-meta.xml
<CustomField>
    <fullName>PNG_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>PNG_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>