DigicielFull/force-app/main/default/objects/Asset/fields/PNG_EstimatedBilledDate__c.field-meta.xml
<CustomField>
    <fullName>PNG_EstimatedBilledDate__c</fullName>
    <formula>PNG_Contract__r.Opportunity__r.CloseDate + PNG_EstimatedImplementationDays__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Billed Date</label>
    <type>Date</type>
</CustomField>