DigicielFull/force-app/main/default/objects/Asset/fields/PNG_ProductLevel2__c.field-meta.xml
<CustomField>
    <fullName>PNG_ProductLevel2__c</fullName>
    <formula>TEXT( Product2.PNG_ProductLevel2__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Level 2</label>
    <type>Text</type>
</CustomField>