DigicielFull/force-app/main/default/objects/Asset/fields/PNG_ProductLevel3__c.field-meta.xml
<CustomField>
    <fullName>PNG_ProductLevel3__c</fullName>
    <formula>TEXT( Product2.PNG_ProductLevel3__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Level 3</label>
    <type>Text</type>
</CustomField>