DigicielFull/force-app/main/default/objects/Asset/fields/PNG_SoftwareKey__c.field-meta.xml
<CustomField>
    <fullName>PNG_SoftwareKey__c</fullName>
    <label>Software Key</label>
    <length>80</length>
    <type>Text</type>
</CustomField>