DigicielFull/force-app/main/default/objects/Asset/fields/PNG_SoftwareRenewalDate__c.field-meta.xml
<CustomField>
    <fullName>PNG_SoftwareRenewalDate__c</fullName>
    <formula>IF( ISPICKVAL(PNG_Type__c, &apos;Software&apos;), ADDMONTHS(PNG_SoftwareKeyEmailSentDate__c,12), null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Software Renewal Date</label>
    <type>Date</type>
</CustomField>