DigicielFull/force-app/main/default/objects/Asset/fields/PNG_SubType__c.field-meta.xml
<CustomField>
    <fullName>PNG_SubType__c</fullName>
    <formula>TEXT(Product2.Product_Sub_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub-Type</label>
    <type>Text</type>
</CustomField>