DigicielFull/force-app/main/default/objects/Asset/fields/PNG_WarrantyFlag__c.field-meta.xml
<CustomField>
    <fullName>PNG_WarrantyFlag__c</fullName>
    <formula>IF( PNG_WarrantyExpiryDate__c &gt;= TODAY() , IMAGE(&quot;/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Jpg&amp;versionId=0685C000000Mdds&amp;operationContext=CHATTER&amp;contentId=05T5C000000P671&quot;, &apos;Green Flag&apos;, 70, 70 ) , IF( PNG_WarrantyExpiryDate__c &lt; TODAY(), IMAGE(&quot;/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Jpg&amp;versionId=0685C000000Mddn&amp;operationContext=CHATTER&amp;contentId=05T5C000000P66r&quot;,&apos;Red Flag&apos;, 70, 70), null))</formula>
    <label>Warranty Flag</label>
    <type>Text</type>
</CustomField>