DigicielFull/force-app/main/default/objects/Asset/recordTypes/PNG_DigicelPNGAsset.recordType-meta.xml
<RecordType>
    <fullName>PNG_DigicelPNGAsset</fullName>
    <active>true</active>
    <label>Digicel PNG Asset</label>
</RecordType>